--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 body {
-    background-color: #1E1E30 !important;
-    color: #fff !important;
-    font-family: 'Roboto', sans-serif;
+  background-color: #1e1e30 !important;
+  color: #fff !important;
+  font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
 
 * {
@@ -11,27 +14,33 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+  width: 5px;
+  height: 5px;
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
+  box-shadow: inset 0 0 5px grey;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #C74FEB;
+  background: #c74feb;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #bc32e6;
+  background: #bc32e6;
 }
 
 @media only screen and (max-width: 768px) {
   body {
-    overflow: hidden;
+    overflow-x: hidden;
   }
 
-  .mobile-add-btn, .admin-name {
+  .right-sidebar {
+    width: 100% !important;
+  }
+
+  .mobile-add-btn,
+  .admin-name {
     display: none;
   }
 
